tests/sksl/errors/Ossfuzz44096.asm.frag
### Compilation failed:

error: 9: sk_SecondaryFragColor is not allowed in SPIR-V
1 error
